@@ -1,3 +1,8 @@
+2020-02-19  Aaron Merey  <amerey@redhat.com>
+
+	* run-debuginfod-find.sh: Test that files unrelated to debuginfod
+	survive cache cleaning.
+
 2020-02-08  Mark Wielaard  <mark@klomp.org>
 
 	* run-pt_gnu_prop-tests.sh: New test.
